[feature] Add i18n, header menu, computer and company models

--- a/src/resources/i18n/fr.json
+++ b/src/resources/i18n/fr.json
@@ -1,14 +1,18 @@
 {
-    "title": "Computer-database",
-    "btn.next": "Suivant",
-    "btn.back": "Précedent",
-    "btn.search": "Rechercher",
-    "btn.cancel": "Annuler",
-    "btn.save": "Sauvegardder",
-    "lbl.loading": "chargement",
-    "lbl.search": "rechercher",
-    "lbl.save": "sauvegarder",
-    "err.field-required": "ce champ est requis",
-    "err.field-date-required": "une date est requise",
-    "err.field-number-required": "un nombre est requis"
+  "dashboard.find": "Ordinateurs trouvés",
+  "dashboard.searchPh": "Chercher un nom",
+  "dashboard.search": "Filtrer par nom",
+  "computer.add": "Ajouter un ordinateur",
+  "computer.edit": "Modifier un ordinateur",
+  "computer.name": "Nom de l'ordinateur",
+  "computer.introduced": "Date d'introduction",
+  "computer.discontinued": "Date d'abandon",
+  "computer.company": "Compagnie",
+  "computer.name.error.empty": "Le nom est requis",
+  "computer.dates.error.pattern": "Doit être dd/MM/yyyy",
+  "computer.discontinued.error.before": "La date d'abandon doit être plus récente que la date d'introduction",
+  "edit": "Modifier",
+  "add": "Ajouter",
+  "or": "ou",
+  "cancel": "Annuler"
 }
